2008-01-23  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (finalize-coutput-file): constants
	*CONSTANT-TABLE* are now (const . guard)
	(DEF-C-CONST): accept :GUARD

2008-01-22  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (SIGSET_NWORDS): compute using
	ffi:ulong, as specified in <bits/sigset.h>
	(sigset_t): array of ulong, as specified in <bits/sigset.h>

2008-01-22  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1407486 ]: FFI revalidates too many library functions
	in new session
	* foreign.d (check_faddress_valid): check that validate_fpointer()
	actually did make the pointer valid
	(update_library): make sure that the non-validatable object
	remains marked as invalid

2008-01-22  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out1): print INVALID for invalid foreign
	functions and foreign addresses

2008-01-22  Sam Steingold  <sds@gnu.org>

	* control.d (APPLY, specdecled_): avoid GCC "warning: value
	computed is not used"

2008-01-22  Sam Steingold  <sds@gnu.org>

	* savemem.lisp (*saveinitmem-verbose*): add defvar
	(saveinitmem): :verbose defaults to *saveinitmem-verbose*
	* spvw.d (init_symbol_values): define *SAVEINITMEM-VERBOSE*
	(main_actions): set it to NIL when argv_verbose < 1
	* init.lisp (*saveinitmem-verbose*): export from CUSTOM
	(loading-message): permit more than 1 format argument
	* constsym.d (*saveinitmem-verbose*): add symbol

2008-01-22  Sam Steingold  <sds@gnu.org>

	* spvw_memfile.d (savemem): return file length
	* lispbibl.d (savemem): update prototype
	* pathname.d (SAVEMEM): return file length

2008-01-21  Sam Steingold  <sds@gnu.org>

	* spvw.d (run_hooks): establish a DRIVER frame around the loop to
	enable reset() on errors in user code
	(main_actions): ditto around loading RC file, init files,
	compiling files, executing scripts (but not expression, they go
	through SYS::DRIVER)

2008-01-22  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (with-abort-restart): new macro: establish the