@@ -47,6 +47,7 @@ User visible changes
   + Avoid the growth of the restart set with each image save. [ 1877497 ]
   + Handle foreign functions coming from the old image which cannot be
     validated. [ 1407486 ]
+  + Fix signal code in bindings/glibc/linux.lisp. [ 1781476 ]
 
 
 2.43 (2007-11-18)
